# llama-3_2-vision

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
build_kit/: Dockerfile  entrypoint.sh
